--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,3 +1,3 @@
 <resources>
-    <color name="bootsplash_background">#F5FCFF</color>
+    <color name="bootsplash_background">#212530</color>
 </resources>
